fix: article metadata mobile issues & hide mini-toc section on mobile EXLM-286, EXLM-293

--- a/blocks/article-metadata-createdby/article-metadata-createdby.scss
+++ b/blocks/article-metadata-createdby/article-metadata-createdby.scss
@@ -1,3 +1,5 @@
+@import '../../styles/sass/breakpoints';
+
 ul.meta-created-for {
   list-style: none;
   margin-top: 0;
@@ -6,20 +8,7 @@ ul.meta-created-for {
   line-height: 25.6px;
 }
 
-ul.meta-created-for > li {
-  display: inline-block;
-  margin-bottom: 0;
-}
-
-.meta-created-for li:first-child {
-  font-size: 0.75rem;
-  text-transform: uppercase;
-  font-weight: bold;
-  padding-right: 4px;
-  padding-left: 0;
-}
-
-.meta-created-for li:not(:first-child) {
+.meta-created-for li.meta-created-for-element {
   font-size: 12px;
   border: 1px solid var(--non-spectrurm-article-light-gray);
   color: var(--non-spectrurm-article-dark-gray);
@@ -29,6 +18,30 @@ ul.meta-created-for > li {
   -webkit-font-smoothing: subpixel-antialiased;
   border-radius: 4px;
   line-height: 15.6px;
+}
+
+ul.meta-created-for > li.meta-created-for-element {
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+ul.meta-created-for .meta-created-for-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
+.meta-created-for li:first-child:not(.meta-created-for-element) {
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-right: 4px;
+  padding-left: 0;
+  margin-bottom: 0;
+
+  @include breakpoint(tablet) {
+    display: inline-block;
+  }
 }
 
 .article-metadata-container .article-metadata-createdby-wrapper {
